# airwave

./: .env.example  .gitignore  Dockerfile.prod  README.md  docker-entrypoint.sh  fly.toml  nginx.prod.conf
backend/: pyproject.toml
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  airwave.py
backend/app/services/: airline_simulator.py  cascade_engine.py  data_pipeline.py
backend/app/utils/: llm_client.py
backend/tests/: conftest.py  test_airwave_api.py  test_cascade_engine.py
frontend/: index.html
frontend/src/: App.vue
frontend/src/api/: airwave.js
frontend/src/components/: CascadeChart.vue
frontend/src/router/: index.js
frontend/src/views/: SimulatorView.vue
