[project]
name = "airwave-backend"
version = "0.1.0"
description = "AirWave - Airline Fare Intelligence Engine powered by multi-agent simulation"
requires-python = ">=3.11,<3.13"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroFish Team" }
]

dependencies = [
    # 核心框架
    "flask>=3.0.0",
    "flask-cors>=6.0.0",
    
    # LLM
    "openai>=1.0.0",

    # ZEP Cloud — agent long-term memory
    "zep-cloud==3.13.0",

    # 工具库
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",

    # AirWave data pipeline
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "gunicorn>=22.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
